# CursorAIHackathon2026

./: .env.example  .gitignore  CLAUDE.md  README.md  bugs.md  docker-compose.yaml  pitch.md  pitch_2min.md
backend/: .gitignore  CLAUDE.md  Dockerfile  README.md  create_agent.py  env.example  intelligence.py  mcp_server.py  pyproject.toml  reset_db.sh
backend/db/: __init__.py  engine.py  models.py  seed.py
backend/demo_data/: knowledge_base.json  messages.json  notes.json  projects.json  sessions.json  todos.json
cloudflared/: Dockerfile
frontend/: createAgent.mts  package.json  pnpm-lock.yaml
frontend/agent/: Dockerfile  env.local.example  package-lock.json  package.json  pnpm-lock.yaml
frontend/agent/app/: globals.css  layout.tsx  page.tsx
frontend/agent/app/api/analyze/: route.ts
frontend/agent/app/api/conversations/: route.ts
frontend/agent/app/transcripts/: page.tsx
frontend/agent/components/labasi/: conversation-panel.tsx  create-project-dialog.tsx  labasi-assistant.tsx  labasi-header.tsx  labasi-logo.tsx  labasi-orb.tsx  logbook-panel.tsx  note-detail-panel.tsx  note-item.tsx  notes-panel.tsx  project-card.tsx  project-sidebar.tsx  projects-view.tsx  todo-item.tsx  todos-panel.tsx  transcript-card.tsx  transcripts-view.tsx
frontend/agent/components/ui/: conversation-bar.tsx
frontend/agent/lib/: conversation-api.ts  conversation-db.ts  db.ts  notes-api.ts  project-api.ts  todos-api.ts  use-conversation-db.ts
frontend/agent/types/: conversation.ts  note.ts  project.ts
frpc/: Dockerfile  entrypoint.sh  frpc.toml  run_frpc.sh
(+11 files in other folders)
